--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,13 +4,12 @@ FROM node:13-alpine
 RUN mkdir /app
 WORKDIR /app
 
-# add `/usr/src/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
 # Install npm packages
 COPY package.json /app/package.json
 RUN npm install
 RUN npm install -g @vue/cli
+
+COPY . /app
 
 # Start the app
 CMD ["npm", "run", "serve"]
