--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.9.0",
     "core-js": "^3.6.4",
+    "localforage": "^1.7.3",
     "vue": "^2.6.11",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.2",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
