--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.4",
     "localforage": "^1.7.3",
     "vue": "^2.6.11",
+    "vue-d3-charts": "^0.2.8",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0"
